# GPXPy

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  adam_manually.py  compile_cpp_simcl1.sh  compile_gpxpy.sh  compile_gpxpy_cpp.sh  compile_gpxpy_python.sh  gpflow_benchmark.py  run_benchmarks.sh  sckit_gp.py
.github/workflows/: ci.yml  lint.yml
benchmark_scripts/: cores_script.sh  data_script.sh  output_formater.sh  tiles_script.sh
bindings/: CMakeLists.txt  gpxpy_py.cpp  module.cpp  utils_py.cpp
build_scripts/: build-all.sh  build-boost.sh  build-cmake.sh  build-hwloc.sh  config.sh
core/: CMakeLists.txt
core/include/: adapter_cblas_fp32.hpp  adapter_cblas_fp64.hpp  adapter_cublas.hpp  adapter_mkl.hpp  cuda_utils.hpp  gp_algorithms_cpu.hpp  gp_algorithms_gpu.hpp  gp_functions.hpp  gp_kernels.hpp  gp_optimizer.hpp  gp_uncertainty.hpp  gpxpy_c.hpp  target.hpp  tiled_algorithms_cpu.hpp  tiled_algorithms_gpu.hpp  utils_c.hpp
core/include/blas_adapters/: adapter_cblas_fp32.hpp  adapter_cblas_fp64.hpp
core/src/: adapter_cblas_fp32.cpp  adapter_cblas_fp64.cpp  adapter_cublas.cpp  adapter_mkl.cpp  cuda_kernels.cu  gp_algorithms_cpu.cpp  gp_algorithms_gpu.cpp  gp_algorithms_mkl.cpp  gp_functions.cpp  gp_kernel.cpp  gp_optimizer.cpp  gp_uncertainty.cpp  gpxpy_c.cpp  target.cpp  tiled_algorithms_cpu.cpp  tiled_algorithms_gpu.cpp  utils_c.cpp
core/src/blas_adapters/: adapter_cblas_fp32.cpp  adapter_cblas_fp64.cpp
data/training/: training_input.txt  training_output.txt
dependencies/: build-all.sh  build-boost.sh  build-clang.sh  build-cmake.sh  build-cppuddle.sh  build-cuda.sh  build-gcc.sh  build-hpx-kokkos.sh  build-hpx.sh  build-hwloc.sh  build-jemalloc.sh  build-kokkos.sh  build-mkl.sh  clang-config.sh  config.sh  gcc-config.sh
docker/: Dockerfile  Dockerfile_base  Dockerfile_debug  Dockerfile_release
docker/base/: Dockerfile
docker/debug/: Dockerfile
docker/release/: Dockerfile
examples/: run_cpp.sh
examples/gpflow_reference/: config.json  execute.py  run_gpflow.sh  run_gpflow_cpu.sh  run_gpflow_gpu.sh
examples/gpxpy_cpp/: CMakeLists.txt  run_cpp.sh  run_gpxpy_cpp.sh
examples/gpxpy_cpp/src/: execute.cpp
examples/gpxpy_plot/: config.json  execute.py
examples/gpxpy_python/: config.json  execute.py  plot.py  run_gpxpy.sh  run_gpxpy_python.sh
examples/gpytorch_reference/: config.py  execute.py  run_gpytorch.sh  run_gpytorch_cpu.sh  run_gpytorch_gpu.sh
examples/test_cpp/: CMakeLists.txt
gpflow_parallel/: config.json  execute.py  gp_monitoring.ipynb  gpflow_execute.py  gpflow_logger.py  utils.py
gpflow_reference/: execute.py  run_gpflow.sh
gpppy_project/: CMakeLists.txt  compile_gpxpy.sh  run.sh
gpppy_project/cpp_code/: CMakeLists.txt  compile_lib.sh  run_cpp.sh
gpppy_project/cpp_code/include/: gaussian_process
gpppy_project/cpp_code/include/gp_headers/: gp_functions_grad.hpp  mkl_adapter.hpp  tiled_algorithms_cpu.hpp  uncertainty.hpp  utils_c.hpp
gpppy_project/cpp_code/src/: gp_functions.cpp  gpppy_c.cpp
gpppy_project/cpp_code/tests/: CMakeLists.txt  run.sh
gpppy_project/cpp_code/tests/src/: execute.cpp  test.cpp
gpppy_project/plot/: plotting.py
gpppy_project/python_code/: gaussian_process.cpp  gpppy_py.cpp  utils_py.cpp
gpppy_project/test/: config.json  execute.py  hpx_logger.py
gpxpy_library/: CMakeLists.txt  compile_cpp.sh  compile_cpp_simcl1.sh  compile_gpxpy.sh  compile_gpxpy_simcl1.sh  run_cpp.sh  run_cpp_simcl1.sh  run_gpxpy.sh  run_gpxpy_simcl1.sh
gpxpy_library/bindings/: gpxpy_py.cpp  module.cpp  utils_py.cpp
gpxpy_library/core/: CMakeLists.txt
gpxpy_library/core/include/: adapter_cublas.hpp  cublas_adapter.hpp  gp_algorithms_cpu.hpp  gp_functions.hpp  gp_functions_grad.hpp  gp_gradient_descent.hpp  gp_uncertainty.hpp  gpxpy_c.hpp  mkl_adapter.hpp  tiled_algorithms_gpu.hpp  utils_c.hpp
gpxpy_library/core/src/: adapter_cublas.cpp  adapter_mkl.cpp  cublas_adapter.cpp  gp_functions.cpp  gp_functions_grad.cpp  gp_gradient_descent.cpp  gp_uncertainty.cpp  gpxpy_c.cpp  tiled_algorithms_cpu.cpp  tiled_algorithms_gpu.cpp  utils_c.cpp
gpxpy_library/test_gpxpy/: config.json  execute.py
gpytorch_parallel/: Simple_GP_Regression.ipynb  comment.txt  config.json  execute.py  output.csv  utils.py
gpytorch_reference/: execute.py  run_gpytorch.sh  utils.py
hpx_py11/: CMakeLists.txt  paths_python.py  run.sh
hpx_py11/cpp_code/: CMakeLists.txt  run_cpp.sh
hpx_py11/cpp_code/include/: automobile
hpx_py11/cpp_code/include/automobile_bits/: gp_functions.hpp  gpppy_c.hpp  mkl_adapter.hpp  motorcycle.hpp  tiled_algorithms_cpu.hpp  uncertainty.hpp  utils_c.hpp
hpx_py11/cpp_code/include/gp_headers/: gp_functions.hpp  gp_functions_grad.hpp  gp_helper_functions.hpp  gpppy_c.hpp  mkl_adapter.hpp  tiled_algorithms_cpu.hpp  uncertainty.hpp  utils_c.hpp
hpx_py11/cpp_code/src/: gp_functions.cpp  gpppy_c.cpp  motorcycle.cpp  utils_c.cpp
hpx_py11/cpp_code/tests/: CMakeLists.txt  run.sh  test_cpp
hpx_py11/cpp_code/tests/src/: execute.cpp  test.cpp
hpx_py11/python_code/: automobile.cpp  gaussian_process.cpp  gppp_py.cpp  gpppy_py.cpp  motorcycle.cpp  university.cpp  utils_py.cpp
hpx_py11/test/: comment.txt  config.json  execute.py  test.py  test_py.py
results_cluster/gpflow/: 10k.txt  10kfull.txt  20kTrain_5kTest.txt
results_cluster/hpx/: 10k_25tiles.txt  10k_25tiles_full.txt  1core_1tile.txt  1core_1tile_fullcov.txt  20k_100tiles.txt  20k_200tiles.txt  20k_25tiles.txt  20k_25tiles_full.txt  30k_100tiles.txt  64cores_10k-100k_tiles100.txt  64cores_10k-100k_tiles25.txt  tiles_scaling  tilescaling_1_500_cores128.txt  tilescaling_1_500_cores16.txt  (+2 more)
scripts/: data_script.sh  tiles_script.sh
spack-repo/: repo.yaml  setup_spack.sh
spack_env/: hpx_package.py  setup_spack.sh  spack.yaml
spack_env_simcl1/: build-boost.sh  hpx_package.py  setup_spack.sh  spack.yaml
spack_env_uni/: setup_spack.sh  spack.yaml
src/: CMakeLists.txt  cholesky_hpx.cpp  hpx_blas.cpp  hpx_cholesky.cpp  hpx_cholesky_cpu.cpp  hpx_cholesky_gpu.cpp  lu_tiled.cpp  lu_tiled_dist.cpp  main.cpp  plotting.py  test.cpp
(+47 files in other folders)
